--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ tungstenite = {version = "0.18", features = ["rustls-tls-native-roots"], default
 url = "2"
 
 [dev-dependencies]
+dotenvy = "0.15.7"
 env_logger = "0.10"
 
 [dev-dependencies.tokio]
